--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,13 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/board
-    username: uno
-    password: thisisTESTpw!
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/board
+#    username: uno
+#    password: thisisTESTpw!
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://localhost:5432/board
+    username: postgres
+    password: postgresncookie
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
