#83 - application.yml: 민감정보를 환경변수로 변경
- 보안에 취약했던 부분을 외부에서 주입시킬 수 있게끔 변경
- IDE에서 설정한 환경변수는 `.idea\runConfigurations`에 파일 형식으로 저장하도록 했다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
 #    username: uno
 #    password: thisisTESTpw!
 #    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:postgresql://localhost:5432/board
-    username: postgres
-    password: postgresncookie
+    url: ${LOCAL_DB_URL}
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
