--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,16 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 spring:
+  application:
+    name: fastcampus-board
+  cloud:
+    vault:
+      scheme: http
+      authentication: token
+      token: ${VAULT_TOKEN}
+  config:
+    import: vault://
   datasource:
-#    url: jdbc:mysql://localhost:3306/board
-#    username: uno
-#    password: thisisTESTpw!
-#    driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${LOCAL_DB_URL}
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
